<resources>
    <string name="app_name">OkSocios</string>
    <string name="title_activity_borrar">BorrarActivity</string>
    <string name="login_form_username">Usuario</string>
    <string name="login_form_password">Clave</string>
    <string name="login_chb">Recordarme!</string>
    <string name="login_btn_login">Ingresar</string>
    <string name="login_signIn">Registrarme!</string>
    <string name="login_forgotPass">Olvidó Clave?</string>
    <string name="title_activity_container">Ingresos</string>
    <string name="action_settings">Ajustes</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="actionBarTitle_arrives">Ingresos</string>
    <string name="actionBarTitle_stats">Estadísticas</string>
    <string name="actionBarTitle_clients">Socios</string>
    <string name="user_name1">Walter White</string>
    <string name="user_name1_description">23 años</string>
</resources>
