<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_cardView"
                android:layout_width="@dimen/login_cardView_wight"
                android:layout_height="@dimen/login_cardView_height"
                android:layout_centerInParent="true"
                card_view:cardCornerRadius="@dimen/login_cardView_cRadius"
                card_view:cardElevation="@dimen/login_cardView_elevation">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/login_cardView_logo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo_blue"
                        android:layout_margin="@dimen/login_img_margin" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/login_form_margin">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/login_textInput_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">

                            <EditText
                                android:id="@+id/login_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="@dimen/login_form_padding"
                                android:drawableStart="@drawable/login_user"
                                android:drawableLeft="@drawable/login_user"
                                android:inputType="text"
                                android:textSize="@dimen/login_form_textSize"
                                android:hint="@string/login_form_username"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/login_textInput_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/login_textInput_username">

                            <EditText
                                android:id="@+id/login_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawablePadding="@dimen/login_form_padding"
                                android:drawableStart="@drawable/login_password"
                                android:drawableLeft="@drawable/login_password"
                                android:inputType="textPassword"
                                android:textSize="@dimen/login_form_textSize"
                                android:hint="@string/login_form_password"/>

                        </android.support.design.widget.TextInputLayout>

                        <CheckBox
                            android:id="@+id/login_chb_remindMe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/login_chb"

                            android:padding="@dimen/login_chb_padding"
                            android:layout_margin="@dimen/login_chb_margin"/>

                        <Button
                            android:id="@+id/login_btnLogIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/login_btn_login"
                            android:theme="@style/btn_Login"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/login_form_padding">

                            <TextView
                                android:id="@+id/login_signIn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/login_signIn"
                                android:onClick="signIn"
                                android:gravity="left"
                                android:textColor="@color/colorPrimary"/>

                            <TextView
                                android:id="@+id/login_forgotPass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/login_forgotPass"
                                android:onClick="forgotPassword"
                                android:gravity="right"
                                android:textColor="@color/colorPrimary"/>

                        </LinearLayout>

                    </LinearLayout>

                </FrameLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>